[gd_scene load_steps=2 format=3 uid="uid://5373cdnaivry"]

[ext_resource type="Script" uid="uid://brj8u3x13pijp" path="res://scenes/ui/ResultsScreen.gd" id="1_e5csd"]

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e5csd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="PopupPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 251.0
offset_top = 70.0
offset_right = 851.0
offset_bottom = 570.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "RUN RESULTS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsLabel" type="Label" parent="PopupPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Time Survived: 0:00
Level Reached: 1
Enemies Defeated: 0
Total Damage: 0
Damage Taken: 0
XP Gained: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReviveButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Revive (Coming Soon)"

[node name="ButtonRow1" type="HBoxContainer" parent="PopupPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer/ButtonRow1"]
layout_mode = 2
text = "Restart Run"

[node name="HideoutButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer/ButtonRow1"]
layout_mode = 2
text = "Return to Hideout"

[node name="ButtonRow2" type="HBoxContainer" parent="PopupPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
alignment = 1

[node name="MenuButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer/ButtonRow2"]
layout_mode = 2
text = "Return to Menu"
